--- a/manon/variables/_form-fieldset.scss
+++ b/manon/variables/_form-fieldset.scss
@@ -2,21 +2,24 @@
 $form-fieldset-border-width: null !default;
 $form-fieldset-border-style: null !default;
 $form-fieldset-border-color: null !default;
-$form-fieldset-padding: 0 !default;
+$form-fieldset-padding: null !default;
+$form-fieldset-margin: null !default;
 
 // Legend
-$form-fieldset-legend-font-weight: bold !default;
+$form-fieldset-legend-font-weight: null !default;
 $form-fieldset-legend-margin-bottom: null !default;
-$form-fieldset-legend-margin: 0 0 1rem 0 !default;
+$form-fieldset-legend-margin: null !default;
+$form-fieldset-legend-padding: null !default;
 
 // Nested fieldsets
+$form-fieldset-fields-padding: null !default;
 $form-fieldset-fields-margin: null !default;
 
 // Label
 $form-fieldset-label-margin: null !default;
 
 // Input
-$form-fieldset-input-margin: 0.5rem 0 1rem 0 !default;
+$form-fieldset-input-margin: null !default;
 
 // Nota bene
 $form-fieldset-nota-bene-padding-bottom: null !default;
