--- a/themes/icore-open/_index.scss
+++ b/themes/icore-open/_index.scss
@@ -241,6 +241,15 @@ and spacing sets */
 
   // form fieldset
   $form-fieldset-border-width: 0,
+  $form-fieldset-padding: 0,
+  $form-fieldset-margin: 0,
+  $form-fieldset-legend-font-weight: bold,
+  $form-fieldset-legend-margin-bottom: null,
+  $form-fieldset-legend-margin: 0 0 1rem 0,
+  $form-fieldset-legend-padding: 0,
+  $form-fieldset-input-margin: 0.5rem 0 1rem 0,
+  $form-fieldset-fields-padding: 0,
+  $form-fieldset-fields-margin: 0,
 
   // form group
   $form-group-gap: spacing.$spacing-050,
